--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
   "author": "Bruno Simioni",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3",
-    "ejs": "^2.5.7",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
+    "node-schedule": "^1.3.0",
     "unirest": "^0.5.1"
   },
   "devDependencies": {
