--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bruno Simioni",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.16.3",
     "node-schedule": "^1.3.0",
     "unirest": "^0.5.1"
   },
